# Telemetry.Serialization.Api

./: CMakeLists.txt
docs/: Architecture.md
mock/: CMakeLists.txt
mock/PiSubmarine/Telemetry/: IDeserializerMock.h  ISerializerMock.h
public/PiSubmarine/Telemetry/: ErrorCode.h  IDeserializer.h  ISerializer.h
src/: CMakeLists.txt
src/PiSubmarine/Telemetry/: ErrorCode.cpp
test/: CMakeLists.txt
test/PiSubmarine/Telemetry/: ErrorCodeTest.cpp  IDeserializerTest.cpp  ISerializerTest.cpp  SerializationMockTest.cpp
